fix: address additional safe sonar issues